-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
3
-
9223372036854775807
If mount.lustre was built without server support, attempting to mount a target without the colon that identifies client mounts fails without an error message. In addition, the exit code is returned to the user is "234" because the code returns -22 instead of 22.
The issue exists in both master and 2.12